--- a/index.html
+++ b/index.html
@@ -77,68 +77,68 @@
 
 <div class="grid">
   <a href="bio1.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/StGeorge.jpg" alt="St George">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Fayoum.jpg" alt="Fayoum">
     <div> شهداء الفيوم <br>  El Fayoum Martyrs </div>
   </a>
   <a href="bio2.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/StJohn.jpg" alt="St John">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Sefin.jpg" alt="Sefin">
     <div> القديس الشهيد أبوسيفين <br> Saint Philopateer Mercurius (Abu Sefein) </div>
   </a>
   <a href="bio3.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/StAbanoub.jpg" alt="St Abanoub">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Bethlehem.jpg.jpg" alt="Bethlehem">
     <div> أطفال بيت لحم الشهداء <br>  The Martyred Children of Bethlehem </div>
   </a>
   <a href="bio4.html" class="card">
-  <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Akhmim.jpg" alt="Akhmim">
+  <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Dafrawi.jpg" alt="Dafrawi">
     <div>  القديس الشهيد إسحق الدفراوى  <br> Saint Eshak El-Dafrawy </div>
   </a>
   <a href="bio5.html" class="card">
-  <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/NewSalib.jpg" alt="New Salib">
+  <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Tadros.jpg" alt="Tadros">
     <div> القديس الشهيد تادرس الشطبى  <br> Saint Tadros El Shatby </div>
   </a>
   <a href="bio6.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/TomasSons.jpg" alt="Tomas Sons">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Romance.jpg" alt="Romance">
     <div> القديس الشهيد بقطر بن رومانس  <br>  Saint Boktor Ben Romance </div>
   </a>
 
   
   <a href="bio7.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/ThreeBrothers.jpg" alt="Three Brothers">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Kozman.jpg" alt="Kozman">
     <div> القديسان الشهيدان كوزمان ودميان <br> Saints Cosmas and Damian </div>
   </a>
   
   <a href="bio8.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/StAthanasius.jpg" alt="St Athanasius">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Abod.jpg" alt="Abod">
     <div> القديس الشهيد أبونا مينا عبود <br> Father Mina Aboud </div>
   </a>
   
   <a href="bio9.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/a4350c6fbc307d77bf53444b2a0ae33b9d156a89/Images/PopeKiro.png" alt="Pope Kiro">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/a4350c6fbc307d77bf53444b2a0ae33b9d156a89/Images/Refka.jpg" alt="Refka">
     <div> القديسة الشهيدة رفقة وأولادها الخمسة <br> Saint Refka and her Five Children </div>
   </a>
   
   <a href="bio10.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/AkhmimKid.jpg" alt="Akhmim Kid">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Dolagy.jpg" alt="Dolagy">
     <div> أم دولاجى وأولادها الشهداء <br> Martyr Mother Dolagy and her Children </div>
   </a>
   
   <a href="bio11.html" class="card">
-<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/FrFanous.jpg" alt="Fr Fanous">
+<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Simona.jpg" alt="Simona">
     <div> القديسة السائحة آنا سيمون <br> St. Ana Simon the Hermit </div>
   </a>
   
   <a href="bio12.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Zaka.jpg" alt="Zaka">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Simon.jpg" alt="Simon">
     <div> القديس سمعان الخراز <br> Saint Simon the Tanner </div>
   </a>
   
 <a href="bio13.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/StBesintaos.jpg" alt="St Besintaos">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Afro.jpg" alt="Afro">
     <div> القديسة أفروسينا <br> Saint Afrosina </div>
   </a>
   
 <a href="bio14.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/StAugustinos.jpg" alt="St Augustinos">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/99f12bf573fead44b14e519164da88540667924b/Images/Mozahem.jpg" alt="Mozahem">
     <div> القديس الشهيد مارجرجس المزاحم <br> Saint George El-Mozahema </div>
   </a>
   
