--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
 
   <header>
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/SaintMinaChr.png" alt="St Mina Chr">
+<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Fayoum.jpg" alt="Martyrs of Fayoum" />
   </header>
   
 <h1>Saint Mina Coptic Orthodox Church</h1>
