--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div> القديس الشهيد أبوسيفين <br> Saint Philopateer Mercurius (Abu Sefein) </div>
   </a>
   <a href="bio3.html" class="card">
-    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Bethlehem.jpg.jpg" alt="Bethlehem">
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Bethlehem.jpg" alt="Bethlehem">
     <div> أطفال بيت لحم الشهداء <br>  The Martyred Children of Bethlehem </div>
   </a>
   <a href="bio4.html" class="card">
