--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   </a>  
   <a href="bio11.html" class="card">
     <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Dolagy.jpg" alt="Dolagy">
-    <div> أم دولاجى وأولادها الشهداء <br> Martyr Mother Dolagy and her Children </div>
+    <div> الأم دولاجى وأولادها الشهداء <br> Martyr Mother Dolagy and her Children </div>
   </a>
 
 
