--- a/index.html
+++ b/index.html
@@ -22,15 +22,25 @@
   height: auto;
 }
     
+    /*PA: adding h3*/    
+     h3 {
+      text-align: center;
+      margin-top: 30px;
+      margin-bottom: 30px;
+      font-size: 1.2em; /* optional for emphasis */
+     }
     h2 {
       text-align: center;
       margin-top: 30px;
       margin-bottom: 30px;
+      font-size: 1.5em; /* optional for emphasis */
+      color: navy;
     }
     h1 {
   text-align: center;
   margin-top: 10px;
   font-size: 2em; /* optional for emphasis */
+      color: darkred
 }
     
     .grid {
@@ -56,11 +66,11 @@
       transform: scale(1.5);
     }
     .card img {
-  width: 110px;
+  width: 120px;
   height: 120px;
   object-fit: cover;
   border-radius: 50%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
   </style>
@@ -71,10 +81,16 @@
     <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_NorthCabinet/main/Images/SaintMinaChr.png" alt="St Mina Chr">
   </header>
   
-<h1>Saint Mina Coptic Orthodox Church</h1>
-  <h1>1562 Rymal Rd E, Hamilton ON L8W 3P1, Canada</h1>
-<h2>Select the Martyr or Saint</h2>
+<h1>Saint Mina Coptic Orthodox Church, Hamilton, Ontario</h1>
+  <h2>Relics of the Saints in the Northern Cabinet (Men's Section)</h2>
+<h3>Discover the story of the Saint or Martyr</h3>
 
+<header>
+    <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_NorthCabinet/main/Images/SouthCabinetImg.png" 
+      alt="Second Header Image" style="width: 400px; height: auto; display: block; margin: 0 auto;">
+  </header>
+
+  
 <div class="grid">
   <a href="bio1.html" class="card">
     <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Fayoum.jpg" alt="Fayoum">
@@ -146,3 +162,4 @@
 
 </body>
 </html>
+
