--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </header>
   
 <h1>Saint Mina Coptic Orthodox Church, Hamilton, Ontario</h1>
-  <h2>Relics of the Saints in the Northern Cabinet (Men's Section)</h2>
+  <h2>Relics of the Saints in the Northern Cabinet (Women's Section)</h2>
 <h3>Discover the story of the Saint or Martyr</h3>
 
 <header>
@@ -162,5 +162,6 @@
 
 </body>
 </html>
+
 
 
